--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.mjamsek.auth</groupId>
     <artifactId>kee-auth</artifactId>
-    <version>1.0.0</version>
+    <version>1.1.0-SNAPSHOT</version>
 
     <name>KeeAuth Library</name>
     <inceptionYear>2019</inceptionYear>
