replaced jjwt with nimbuds jose implementation, added support for elliptic curve keys, refactored keys loading

--- a/core/src/test/resources/context-config.yml
+++ b/core/src/test/resources/context-config.yml
@@ -1,5 +1,7 @@
 kee-auth:
-  autoconfigure: false
+  oidc:
+    auto-configure: false
+    issuer: https://localhost:8090/auth
   jwt:
     keys:
       - kid: ac451sd4
