--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
         <kumuluzee.version>3.10.0</kumuluzee.version>
         <jackson.version>2.12.2</jackson.version>
-        <jjwt.version>0.11.2</jjwt.version>
+        <jose.version>9.11.1</jose.version>
         <javax-annotations.version>1.3.2</javax-annotations.version>
 
         <junit.version>4.13.2</junit.version>
@@ -56,7 +56,7 @@
     <licenses>
         <license>
             <name>MIT License</name>
-            <url>http://www.opensource.org/licenses/mit-license.php</url>
+            <url>https://www.opensource.org/licenses/mit-license.php</url>
         </license>
     </licenses>
 
@@ -99,24 +99,14 @@
                 <version>${jackson.version}</version>
             </dependency>
             <dependency>
-                <groupId>io.jsonwebtoken</groupId>
-                <artifactId>jjwt-api</artifactId>
-                <version>${jjwt.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.jsonwebtoken</groupId>
-                <artifactId>jjwt-impl</artifactId>
-                <version>${jjwt.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.jsonwebtoken</groupId>
-                <artifactId>jjwt-jackson</artifactId>
-                <version>${jjwt.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>javax.annotation</groupId>
                 <artifactId>javax.annotation-api</artifactId>
                 <version>${javax-annotations.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.nimbusds</groupId>
+                <artifactId>nimbus-jose-jwt</artifactId>
+                <version>${jose.version}</version>
             </dependency>
 
             <!-- Testing dependencies -->
