--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -28,6 +28,12 @@ pipeline {
                 }
             }
         }
+        stage("SonarQube Analysis") {
+            def mvn = tool 'mvn-3.6';
+            withSonarQubeEnv() {
+                sh "${mvn}/bin/mvn clean verify sonar:sonar -Dsonar.projectKey=Jamsek-m_kee-auth_AYHN33_2ZY2MFTYvVt0R"
+            }
+        }
         stage("Run tests") {
             steps {
                 sh "mvn clean test"
