--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -29,9 +29,11 @@ pipeline {
             }
         }
         stage("SonarQube Analysis") {
-            def mvn = tool 'mvn-3.6';
-            withSonarQubeEnv() {
-                sh "${mvn}/bin/mvn clean verify sonar:sonar -Dsonar.projectKey=Jamsek-m_kee-auth_AYHN33_2ZY2MFTYvVt0R"
+            steps {
+                def mvn = tool 'mvn-3.6';
+                withSonarQubeEnv() {
+                    sh "${mvn}/bin/mvn clean verify sonar:sonar -Dsonar.projectKey=Jamsek-m_kee-auth_AYHN33_2ZY2MFTYvVt0R"
+                }
             }
         }
         stage("Run tests") {
