--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -31,7 +31,7 @@ pipeline {
         }
         stage("SonarQube Analysis") {
             steps {
-                withSonarQubeEnv("sonarqube") {
+                withSonarQubeEnv(installationName: "sonarqube", credentialsId: "sonarqube-token") {
                     sh "${MAVEN_HOME}/bin/mvn clean verify sonar:sonar -Dsonar.projectKey=Jamsek-m_kee-auth_AYHN33_2ZY2MFTYvVt0R"
                 }
             }
